--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,4 +2,5 @@ name: PremiumChestSell
 version: ${project.version}
 main: dev.warring.chestsell.PremiumChestSell
 authors: [Warring]
+depend: [PremiumCore]
 description: Chest sell plugin
